// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxNavbarNav customize 1`] = `
<div>
  <h3
    class="navbar-nav bazinga"
    role="navigation"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxNavbarNav component 1`] = `
<div>
  <ul
    class="navbar-nav"
    role="navigation"
  >
    Test
  </ul>
</div>
`;
